Fixed spacing issue in first section of home slider for large screens beneath 1024px.

--- a/public/scss/_home.scss
+++ b/public/scss/_home.scss
@@ -93,6 +93,9 @@ $light-grey: #bebebe;
             font-weight: 900;
             color: $orange;
           }
+          img{
+            height: 225px;
+          }
           .fav-content{
             height: 275px;
             display: flex;
@@ -239,6 +242,7 @@ $light-grey: #bebebe;
             height: 500px;
             h3{
               width: 200px;
+              height: 200px;
               font-size: 2.5rem;
               margin: auto;
             }
