--- a/public/scss/app.css
+++ b/public/scss/app.css
@@ -189,6 +189,10 @@ table {
   color: #ff6600;
 }
 
+#landing .landing-favorites .favs-container .fav-slider .user-favs img {
+  height: 225px;
+}
+
 #landing .landing-favorites .favs-container .fav-slider .user-favs .fav-content {
   height: 275px;
   display: -webkit-box;
@@ -357,6 +361,7 @@ table {
   }
   #landing .landing-favorites .favs-container .fav-slider .user-favs h3 {
     width: 200px;
+    height: 200px;
     font-size: 2.5rem;
     margin: auto;
   }
